@@ -1,3 +1,9 @@
+2009-04-02  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-arrived-add): If url has a multi-byte character, do not
+	do recursive-call itself. If decoded url does not have a multi-byte
+	character, do not do recursive-call itself.
+
 2009-03-28  Naohiro Aota  <naota@elisp.net>
 
 	* w3m.el (w3m-goto-url-with-timer): When going to the same url, use
